# animals_collateral_adjectives_collector

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-app.yml
animals_collateral_adjectives_collector/: __init__.py  animal_image_collector.py  collateral_adjectives_collector.py  collateral_adjectives_fetcher.py  collateral_adjectives_table_parser.py  constants.py  data_collector.py  html_generator.py  image_fetcher.py  image_processing.py  logging_config.py  main.py
animals_collateral_adjectives_collector/models/: animal.py
animals_collateral_adjectives_collector/templates/: results-template.html
tests/: test_animal_image_collector.py  test_collateral_adjectives_collector.py  test_collateral_adjectives_fetcher.py  test_collateral_adjectives_table_parser.py  test_data_collector.py  test_html_generator.py  test_image_fetcher.py  test_image_processing.py
