[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "animals_collateral_adjectives_collector"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
animals_collateral_adjectives_collector = 'animals_collateral_adjectives_collector.main:main'

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
requests = "2.32.3"
pydantic = "2.10.5"
attrs = "24.3.0"
beautifulsoup4 = "4.12.3"
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.4"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]